CHANGES.txt for Tux Paint

Tux Paint - A simple drawing program for children.

Copyright (c) 2003 by Bill Kendrick
bill@newbreedsoftware.com
http://www.newbreedsoftware.com/tuxpaint/


2003.Jul.3 (0.9.12) [cvs]
  * Fixed Mac OS X #include typo.
    Darrell Walisser <walisser@mac.com>

  * Fixed bug where non-translated stamp description text would get drawn
    right-to-left after the kudos text (e.g., "Great!") goes away.
    Thanks to Itai <Itais@newmail.net>
  
  * French translation update.
    Jacques Chion <Jacques.Chion@wanadoo.fr>

  * Added call to close iconv when quitting.
    John Popplewell <john@johnnypops.demon.co.uk>


2003.Jun.17 (0.9.11)
  * Windows bugfixes.
    John Popplewell <john@johnnypops.demon.co.uk>

  * Mac OS X print update.  Get to a print dialog by holding Alt/Option when
    clicking "Print."  (Similar to how Windows handles it.)
    Darrell Walisser <walisser@mac.com>

  * Hebrew translation!
    Dovix <dovix2003@yahoo.com>
    Koby <kobybo@hotmail.com>

  * Right-to-left language support (for Hebrew, for example).

  * Updated Korean translations.
    Mark K. Kim <mark@cbreak.org>

  * UTF-8 support in the Text Tool!
    Robert Glowczynski <robertg@software.com.pl>,
    Mantas Kriauciunas <monte@mail.lt>

  * Added 'The Gimp' to docs/PNG.txt
    Mantas Kriauciunas <monte@mail.lt>

  * Set $OUTPUT_CHARSET for Japanese locale, to fix Win32 issue.
    TOYAMA Shin-ichi <kyone@tky2.3web.ne.jp>

  * Lithuanian translation.
    Mantas Kriauciunas <monte@mail.lt>,
    Rita Verbauskaite <verba@centras.lt>

  * Fixed bug that would cause some translated stamp sounds to not load.
    John Popplewell <john@johnnypops.demon.co.uk>

  * Added Dutch translation of (older version of) HTML documentation.
    (docs/html/README-nl.html; docs/nl/README.txt)
    Geert Stams <geert-csg@wanadoo.nl>

  * Updated Polish translations.
    Robert Glowczynski <robertg@software.com.pl>

  * Added Polish version of manpage.